codegen/ui_tests/rhai_fn_rename_collision_oneattr.stderr
error: duplicate Rhai signature for 'foo'
  --> ui_tests/rhai_fn_rename_collision_oneattr.rs:17:12
   |
17 |     pub fn foo(input: Point) -> bool {
   |            ^^^

error: duplicated function 'foo'
  --> ui_tests/rhai_fn_rename_collision_oneattr.rs:12:15
   |
12 |     #[rhai_fn(name = "foo")]
   |               ^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_module`
  --> ui_tests/rhai_fn_rename_collision_oneattr.rs:27:8
   |
27 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of unresolved module or unlinked crate `test_module`
   |
   = help: if you wanted to use a crate named `test_module`, use `cargo add test_module` to add it to your `Cargo.toml`
